--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -2,18 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
 
 body {
-    background-color: #eee;
-    color: #555;
+    background-color: rgb(71, 71, 71);
+    color: #333;
     font-family: Montserrat, sans-serif;
 }
 
 .todolist {
-    background-color: #FFF;
+    background-color: #333;
     padding: 20px 20px 10px 20px;
     width: 100%;
     margin: 30px auto;
-    border: 1px solid #ddd;
-    border-radius: 2px;
+    border: 1px solid rgb(32, 32, 32);
+    border-radius: 5px;
     position: relative;
 }
 
@@ -23,6 +23,7 @@ body {
     text-align: center;
     font-family: Comfortaa, sans-serif;
     font-size: 44px;
+    color: #DDD;
 }
 
 .todolist .info {
@@ -30,18 +31,21 @@ body {
     margin-top: 20px;
     left: 0;
     right: 0;
-    color: #999;
+    color: #aaa;
     text-align: center;
 }
 
 .form-control {
-    border-radius: 0;
+    border-radius: 5px;
+    background-color: #ddd;
 }
 
 li.ui-state-default {
-    background: #fff;
+    background: #333;
     border: none;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #555;
+    color: #ccc;
+    margin-left: 5px;
 }
 
 li.ui-state-default:last-child {
@@ -54,12 +58,14 @@ li.completed label {
 }
 
 footer {
-    border-top: 1px solid #ddd;
-    background-color: #F4FCE8;
+    border-top: 1px solid #aaa;
+    background-color: #ddd;
     margin: 0 -20px -10px -20px;
     padding: 12px 20px;
     position: relative;
-    color: #777;
+    color: rgb(36, 36, 36);
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .filters {
@@ -83,12 +89,13 @@ footer {
 }
 
 .filters li a.selected, .filters li a:hover {
-    border-color: rgba(175, 47, 47, 0.1);
+    border-color: rgba(175, 47, 47, 0.335);
+    color: #444;
 }
 
 .filters li a.selected {
-    border-color: rgba(175, 47, 47, 0.2);
-    color: #555;
+    border-color: rgba(175, 47, 47, 0.63);
+    color: #111;
 }
 
 footer .buttons {
@@ -124,8 +131,7 @@ footer .buttons {
 .alert.alert-info {
     margin: 10px 0;
     padding: 10px;
-    border-radius: 0;
-    background: #f2f2f2;
-    border: 1px solid rgba(229, 229, 229, 0.5);
-    color: #888;
+    background: #333;
+    border: none;
+    color: rgb(206, 206, 206);
 }
